<resources>
    <string name="app_name">Final Demo</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or_connect_with">OR Connect with</string>
</resources>