<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".screens.signingscreens.SignUpScreen" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <View android:layout_height="1dp" android:layout_width="1dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="30dp" android:id="@+id/textView2"/>


    <LinearLayout android:layout_height="250dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout2" app:layout_constraintTop_toTopOf="parent" android:orientation="vertical" android:background="@drawable/b5">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btn_in_u" android:background="@drawable/btn_signing_background" android:textColor="@color/white" android:text="@string/sign_in" android:padding="12dp" android:layout_margin="30dp" android:layout_gravity="end"/>

</LinearLayout>


    -<LinearLayout android:layout_height="0dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="@+id/textView2" android:orientation="vertical" android:background="@drawable/box_background" android:gravity="center" android:weightSum="11">

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="@color/purple_500" android:text="@string/sign_up" android:layout_margin="20dp" android:textStyle="bold" android:textSize="35sp" android:layout_weight="1" android:paddingTop="10dp"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/user_name_su" android:background="@drawable/et_general_background" android:textColor="@color/purple_500" android:layout_margin="7dp" android:layout_gravity="center" android:textSize="20sp" android:layout_weight="1" android:paddingEnd="18dp" android:paddingStart="18dp" android:textColorHint="@color/purple_500" android:hint="@string/user_name" android:maxLines="1" android:inputType="text" android:ems="13"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et_add_email" android:background="@drawable/et_general_background" android:textColor="@color/purple_500" android:layout_margin="7dp" android:layout_gravity="center" android:textSize="20sp" android:layout_weight="1" android:paddingEnd="18dp" android:paddingStart="18dp" android:textColorHint="@color/purple_500" android:hint="@string/email" android:maxLines="1" android:inputType="textEmailAddress" android:ems="13"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et_add_password" android:background="@drawable/et_general_background" android:textColor="@color/purple_500" android:layout_margin="7dp" android:layout_gravity="center" android:textSize="20sp" android:layout_weight="1" android:paddingEnd="18dp" android:paddingStart="18dp" android:textColorHint="@color/purple_500" android:hint="@string/password" android:maxLines="1" android:inputType="textPassword" android:ems="13"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/et_confirm_password" android:background="@drawable/et_general_background" android:textColor="@color/purple_500" android:layout_margin="7dp" android:layout_gravity="center" android:textSize="20sp" android:layout_weight="1" android:paddingEnd="18dp" android:paddingStart="18dp" android:textColorHint="@color/purple_500" android:hint="@string/confirm_password" android:maxLines="1" android:inputType="textPassword" android:ems="13"/>

    <View android:layout_height="0dp" android:layout_width="match_parent" android:layout_weight="2"/>

    <TextView android:layout_height="30dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn_up_u" android:background="@drawable/btn_general_background" android:textColor="@color/white" android:text="@string/sign_up" android:layout_margin="10dp" android:layout_gravity="center" android:gravity="center" android:textStyle="bold" android:textSize="22sp" android:layout_weight="1" android:ems="12"/>

    <View android:layout_height="0dp" android:layout_width="match_parent" android:layout_weight="3"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
